--- a/index.html
+++ b/index.html
@@ -6,19 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Phantom Ninja DOM edition</title>
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+        <div id="menu">
+                <div id="logodiv"><img src="./assets/Logo.png" alt="Logodomedition">
+               <div id="enemydiv"> <img class ="enemyimage"src="./assets/Enemies/big_demon_idle_anim_f0.png" alt="">
+              <img class ="enemyimage" src="./assets/Enemies/big_zombie_idle_anim_f0.png" alt="">
+            <img class ="enemyimage" src="./assets/Enemies/masked_orc_idle_anim_f0.png" alt="">
+        <img class ="enemyimage" src="./assets/Enemies/ogre_idle_anim_f0.png" alt="">    
+        <img class ="enemyimage" src="./assets/Enemies/swampy_run_anim_f2.png" alt="">
+    <img class ="enemyimage" src="./assets/Enemies/wizzart_m_hit_anim_f0.png" alt="">    
+<img class ="enemyimage" src="./assets/Enemies/zombie_idle_anim_f1.png" alt="">    
+<img class ="enemyimage" src="./assets/player1.png" alt="">
+</div>    
+            
+            </div>
+              <div id="buttondiv">  <button type="button" class="btn btn-lg btn-primary" disabled>Press Enter To Start</button></div>
+            </div>
     <div id="principal">
         <div id="titulos">
-<img id="phantomlogo" width="350px" height="200px" src="./assets/icon.png" alt="phantom-ninja-logo">
+<img id="phantomlogo" width="350px" height="200px" src="./assets/Logo.png" alt="phantom-ninja-logo">
 <img id="wasd" src="./assets/wasd.png" width="200px" height="150px" alt="wasd">
 <span>Move Player</span>
 <img id="click" src="./assets/click.png" width="150px" height="150px" alt="click">
 <span>Move Dream Warrior</span>
 </div>   
+<div id="gameboard">
 <canvas id="canvas" width= "1000px" height=" 750px"  ></canvas>
+</div>
 
 </div>
+<audio src="./assets/sounds/Dreamw.mp3" id="titlemusic"></audio>
+<audio src="./assets/sounds/walk.wav" id="walk"></audio>
+<audio src="./assets/sounds/start.wav" id="startsound"></audio>
 <script src="./main.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
