--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 <img class ="enemyimage" src="./assets/Enemies/zombie_idle_anim_f1.png" alt="">    
 <img class ="enemyimage" src="./assets/player1.png" alt="">
 </div>    
+<p>Press [Enter] to start</p>
+            </div>
+          </div>
             
-            </div>
-              <div id="buttondiv">  <button type="button" class="btn btn-lg btn-primary" disabled>Press Enter To Start</button></div>
-            </div>
     <div id="principal">
         <div id="titulos">
 <img id="phantomlogo" width="350px" height="200px" src="./assets/Logo.png" alt="phantom-ninja-logo">
