mas sonidos agregados

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <img class ="enemyimage" src="./assets/Enemies/zombie_idle_anim_f1.png" alt="">    
 <img class ="enemyimage" src="./assets/player1.png" alt="">
 </div>    
-<p>Press [Enter] to start</p>
+<p class="player">Press [Enter] to start 1 Player Mode</p>
+<p class="player">Prees [Space] to start 2 Player Mode</p>
             </div>
           </div>
             
@@ -42,6 +43,9 @@
 <audio src="./assets/sounds/walk.wav" id="walk"></audio>
 <audio src="./assets/sounds/start.wav" id="startsound"></audio>
 <audio src="./assets/sounds/slash.wav" id="slash"></audio>
+<audio src="./assets/sounds/pickcoin.wav" id="pickcoin"></audio>
+<audio src="./assets/sounds/winsound.wav" id= "wins"></audio>
+<audio src="./assets/sounds/enemy appears.wav" id= "enemyappear"></audio>
 <script src="./main.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
